[package]
name = "client_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "*"
proto = {path = "../proto"}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "*"
rand = "*"


[build-dependencies]
tonic-build = "0.8"