[package]
name = "replication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openraft = "0.7.4"
serde = "*"
anyhow = "*"
tonic = "*"
async-trait = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "*"
prost = "*"
proto = {path = "../proto"}
tracing = "*"
tracing-subscriber = "*"
futures = "*"

[dev-dependencies]
rand = "0.8"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "repl_store"
path = "src/bin/replication_service.rs"